# hippo

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TESTING.md  docker-compose.yml  hippo.toml.example  requests.http
.github/: dependabot.yml
.github/workflows/: build-wasm.yml  ci.yml  deploy-site.yml  eval.yml  publish-wasm.yml  release-docker.yml  release-dotnet.yml  release-go.yml  release-python.yml  release-typescript.yml
benches/: benchmark.rs
demo/: index.html
docs/: CONFIG.md  DREAMS.md  openapi.yaml
evals/: README.md  requirements.txt  scoring.py
evals/locomo/: run.py
evals/longmemeval/: run.py
fixtures/: README.md  llm-responses.json
hippo-api/: Cargo.toml
hippo-api/src/: lib.rs
hippo-wasm/: Cargo.toml  build.sh
hippo-wasm/src/: lib.rs  wasm_llm.rs
plugins/openclaw/: README.md  index.ts  openclaw.plugin.json  package.json  tsconfig.json
plugins/zeroclaw/: Cargo.toml  README.md
plugins/zeroclaw/src/: client.rs  config.rs  lib.rs  memory.rs  models.rs  tools.rs
sdks/dotnet/: Hippo.Sdk.slnx  README.md
sdks/dotnet/src/Hippo.Sdk/: Exceptions.cs  HippoClient.cs  IHippoLogger.cs  Models.cs  ResponseExtensions.cs
sdks/dotnet/tests/Hippo.Sdk.Tests/: Hippo.Sdk.Tests.csproj  HippoClientTests.cs
sdks/go/: README.md  errors.go  go.mod  hippo.go  hippo_test.go  models.go
sdks/python/: README.md  pyproject.toml
sdks/python/hippo/: __init__.py  client.py  exceptions.py  models.py
sdks/python/tests/: test_client.py
sdks/rust/: Cargo.toml
sdks/rust/src/: client.rs  error.rs  lib.rs  models.rs
sdks/typescript/: README.md  package-lock.json  package.json
sdks/typescript/src/: client.ts  errors.ts  helpers.ts  index.ts  models.ts
sdks/typescript/tests/: client.test.ts
site/: index.html
src/: audit.rs  auth.rs  config.rs  credibility.rs  error.rs  events.rs  export.rs  fixtures.rs  graph.rs  graph_backend.rs  http.rs  in_memory_graph.rs  lib.rs  llm.rs  llm_service.rs  main.rs  math.rs  mcp.rs  models.rs  openapi.rs  postgres_graph.rs  qdrant_graph.rs  rate_limit.rs  sqlite_graph.rs  state.rs  testing.rs
src/backends/: mod.rs
src/backends/falkor/: cypher.rs  mod.rs  values.rs
src/backends/in_memory/: mod.rs
src/backends/postgres/: mod.rs
src/backends/qdrant/: mod.rs
src/backends/sqlite/: mod.rs
src/http/: mod.rs
src/http/handlers/: admin.rs  core.rs  graphs.rs  mod.rs  observability.rs
src/llm/: mod.rs  retry.rs
src/pipeline/: ask.rs  consolidate.rs  context.rs  context_temporal.rs  diagnose.rs  dreamer.rs  maintain.rs  mod.rs  query.rs  reflect.rs  remember.rs  timeline.rs
src/pipeline/dreamer/: actions.rs  mod.rs
tests/: eval_test.rs  evals.rs  integration.sh  integration_test.rs  maintenance.rs  memory_creation.rs  retrieval.rs  scenarios.rs  unit_auth_http.rs  unit_context.rs  unit_dreamer.rs  unit_dreamer_idempotency.rs  unit_dreamer_pool.rs  unit_dreamer_sqlite.rs  unit_maintain.rs  unit_remember.rs  unit_sqlite.rs
tests/helpers/: fixtures.rs  mod.rs
ui/: package-lock.json  package.json  svelte.config.js
ui/src/: app.html
ui/src/lib/: api.ts  features.ts  types.ts
ui/src/lib/components/: EdgeDetail.svelte  EdgeTable.svelte  EntityCard.svelte  EntityDetail.svelte  FeatureGate.svelte  GraphView.svelte  SearchBar.svelte  StatCard.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/ask/: +page.svelte
ui/src/routes/billing/: +page.svelte
ui/src/routes/graph/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/settings/: +page.svelte
ui/src/routes/usage/: +page.svelte
ui/src/routes/users/: +page.svelte
