[package]
name = "hippo"
version = "0.1.0"
edition = "2021"
autobenches = false

[[bin]]
name = "hippo"
path = "src/main.rs"

[[bin]]
name = "mcp-server"
path = "src/bin/mcp_server.rs"

[[bin]]
name = "eval-regression"
path = "src/bin/eval_regression.rs"

[[bin]]
name = "eval-score"
path = "src/bin/eval_score.rs"

[[bin]]
name = "benchmark"
path = "benches/benchmark.rs"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tokio = { version = "1", features = ["full"] }
falkordb = { version = "0.2", features = ["tokio"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
dirs = "5"
regex = "1"
async-trait = "0.1"
dotenvy = "0.15.7"
argon2 = "0.5"
base64 = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
