[package]
name = "hippo-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
hippo = { path = "..", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
anyhow = "1"
async-trait = "0.1"
tracing = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Per-package profile customisation lives in the workspace root Cargo.toml
# under [profile.release.package.hippo-wasm]. Workspace members cannot
# define [profile.*] tables themselves.
