[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippo-sdk"
version = "0.1.0"
description = "Python SDK for the Hippo natural-language knowledge graph API"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.25,<1",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["hippo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
