[package]
name = "hippo-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK for the Hippo knowledge graph API"

[dependencies]
hippo-api = { path = "../../hippo-api" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
